RESOLVED FIXED174859
[WPE] Fix a potential crash in the platform pasteboard when reading a string
https://bugs.webkit.org/show_bug.cgi?id=174859
Summary [WPE] Fix a potential crash in the platform pasteboard when reading a string
Claudio Saavedra
Reported 2017-07-26 03:37:39 PDT
[WPE] Fix a potential crash in the platform pasteboard when reading a string
Attachments
Patch (1.58 KB, patch)
2017-07-26 03:39 PDT, Claudio Saavedra
no flags
Patch (1.67 KB, patch)
2017-07-26 03:51 PDT, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2017-07-26 03:39:58 PDT
Zan Dobersek
Comment 2 2017-07-26 03:43:40 PDT
Comment on attachment 316442 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=316442&action=review > Source/WebCore/platform/wpe/PlatformPasteboardWPE.cpp:67 > - struct wpe_pasteboard_string string; > + struct wpe_pasteboard_string string = { nullptr, 0 }; > wpe_pasteboard_get_string(m_pasteboard, type.utf8().data(), &string); > > String returnValue(string.data, string.length); Early return should be used, returning String(), in case string.length is still zero after wpe_pasteboard_get_string() call.
Claudio Saavedra
Comment 3 2017-07-26 03:51:07 PDT
WebKit Commit Bot
Comment 4 2017-07-26 06:52:39 PDT
Comment on attachment 316443 [details] Patch Clearing flags on attachment: 316443 Committed r219943: <http://trac.webkit.org/changeset/219943>
WebKit Commit Bot
Comment 5 2017-07-26 06:52:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.