[WPE] Fix a potential crash in the platform pasteboard when reading a string https://bugs.webkit.org/show_bug.cgi?id=174859

Reviewed by Žan Doberšek.

We shouldn't assume that the wpe_pasteboard_string struct will be
filled in, so initialize it.

* platform/wpe/PlatformPasteboardWPE.cpp:
(WebCore::PlatformPasteboard::readString): Initialize the struct
before passing it to wpe and early return if it's still empty.


Canonical link: https://commits.webkit.org/191678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219943 268f45cc-cd09-0410-ab3c-d52691b4dbfc